# zero2prod

./: Cargo.toml  Dockerfile  Justfile  README.md  \  devenv.nix  spec.yaml
.github/workflows/: general.yml
.sqlx/: query-f6c8537506b93653ceff1c59ef2f9f072973ceb4e918e89e069ea1b7f5bb4de9.json  query-f7922b55e4a6d69f3b1808dcbb46bc185ca74bceab59c3d8446f6c0bf37f1e6b.json
configuration/: base.yaml  local.yaml  production.yaml
migrations/: 20260218151445_make_status_not_null_in_subscriptions.sql  20260218151916_create_subscription_tokens_table.sql
scripts/: init_db.sh
src/: authentication.rs  configuration.rs  email_client.rs  main.rs  startup.rs  telemetry.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/routes/: health_check.rs  newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
src/routes/home/: home.html
src/routes/login/: get.rs  login.html  post.rs
tests/: health_check.rs
tests/api/: health_check.rs  helpers.rs  login.rs  main.rs  newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
