[package]
name = "zero2prod"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
config = "0.15.19"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1", features = ["v4"] } 
chrono = { version = "0.4.22", default-features = false, features = ["clock"] }
log = "0.4.29"
tracing = { version = "0.1", features = ["log"]}
tracing-log = "0.2"
tracing-subscriber = { version  = "0.3.22", features = ["registry", "env-filter"]}
tracing-bunyan-formatter = "0.3.10"
# Using table-like toml syntax to avoid a super-long line!
[dependencies.sqlx]
version = "0.8"
default-features = false
features = [
    "runtime-tokio-rustls", # tells sqlx to use the tokio runtime for its futures and rustls as TLS backend
    "macros", # gives us access to sqlx::query! and sqlx::query_as!
    "postgres", # unlocks Postgres-specific functionality (
    "uuid", # adds support for mapping SQL UUIDs to the Uuid type from the uuid crate.
    "chrono", # adds support for mapping SQL timestamptz to the DateTime<T> type from the chrono crate. 
    "migrate", # gives us access to the same functions used under the hood by sqlx-cli to manage migrations. 
]

[dev-dependencies]
reqwest = "0.12"

[lib]
# We could use any path here, but we are following the community convention
# We could specify a library name using the name field. If unspecified,
# cargo will default to package.name, which is what we want.
path = "src/lib.rs"

# Notice the double square brackets: it's an array in TOML's syntax.
# We can only have one library in a project, but we can have multiple binaries!
# If you want to manage multiple libraries in the same repository
# have a look at the workspace feature - we'll cover it later on.
[[bin]]
path = "src/main.rs"
name = "zero2prod"
